--- a/src/sass/blocks/_request.sass
+++ b/src/sass/blocks/_request.sass
@@ -36,10 +36,12 @@
   &__button
     padding: 17px 0
     margin-bottom: 21px
+    width: 100%
   &__checkbox
     display: none
   &__accept
     position: relative
+    display: block
     max-width: 440px
     margin-bottom: 21px
     padding-left: 45px
