--- a/src/sass/blocks/_test.sass
+++ b/src/sass/blocks/_test.sass
@@ -169,6 +169,7 @@
     font-size: 14px
     font-weight: 400
     color: $link-c
+    cursor: pointer
     &:hover
         color: lighten($link-c, 10%)
 
