--- a/src/sass/blocks/_modal.sass
+++ b/src/sass/blocks/_modal.sass
@@ -221,7 +221,7 @@
     &_prev
       margin-right: 15px
   &__confirm
-    display: block
+    display: none
     margin: 35px 0 0
     color: $text-add
     font-size: 12px
