--- a/src/sass/blocks/_request.sass
+++ b/src/sass/blocks/_request.sass
@@ -89,7 +89,7 @@
     border-bottom-right-radius: 6px
 
 .request__checkbox:checked + label::before
-  background: url("../img/request/icon_check.svg")
+  background: url("../img/icons/icon_check.svg")
   background-repeat: no-repeat
   background-position: 50% 50%
 
