--- a/src/sass/blocks/_test.sass
+++ b/src/sass/blocks/_test.sass
@@ -52,7 +52,7 @@
       border: 1px solid #e4e4e4
       cursor: pointer
   &__checkbox:checked + label::before
-    background: url("../img/request/icon_check.svg")
+    background: url("../img/icons/icon_check.svg")
     background-repeat: no-repeat
     background-position: 50% 50%
 .input__wrapper
