--- a/src/sass/blocks/_request.sass
+++ b/src/sass/blocks/_request.sass
@@ -80,8 +80,28 @@
     padding: 14px 0
     flex-basis: 180px
     color: $text-add
-    img
+    svg
       margin-right: 10px
+      fill: #d0d0d0
+      transition: 0.2s
+    &:nth-child(1)
+      &:hover
+        color: green
+        border-color: green
+        svg
+          fill: green
+    &:nth-child(2)
+      &:hover
+        color: violet
+        border-color: violet
+        svg
+          fill: violet
+    &:nth-child(3)
+      &:hover
+        color: blue
+        border-color: blue
+        svg
+          fill: blue
   &__image
     padding: 80px 55px
     background-color: #e3eaf0
