--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3538,30 +3538,30 @@ input[type="radio"] {
 }
 
 .request__link:nth-child(1):hover {
-  color: green;
-  border-color: green;
+  color: #00e676;
+  border-color: #00e676;
 }
 
 .request__link:nth-child(1):hover svg {
-  fill: green;
+  fill: #00e676;
 }
 
 .request__link:nth-child(2):hover {
-  color: violet;
-  border-color: violet;
+  color: #665ca7;
+  border-color: #665ca7;
 }
 
 .request__link:nth-child(2):hover svg {
-  fill: violet;
+  fill: #665ca7;
 }
 
 .request__link:nth-child(3):hover {
-  color: blue;
-  border-color: blue;
+  color: #179cde;
+  border-color: #179cde;
 }
 
 .request__link:nth-child(3):hover svg {
-  fill: blue;
+  fill: #179cde;
 }
 
 .request__image {
