--- a/src/sass/blocks/_request.sass
+++ b/src/sass/blocks/_request.sass
@@ -86,22 +86,22 @@
       transition: 0.2s
     &:nth-child(1)
       &:hover
-        color: green
-        border-color: green
+        color: #00e676
+        border-color: #00e676
         svg
-          fill: green
+          fill: #00e676
     &:nth-child(2)
       &:hover
-        color: violet
-        border-color: violet
+        color: #665ca7
+        border-color: #665ca7
         svg
-          fill: violet
+          fill: #665ca7
     &:nth-child(3)
       &:hover
-        color: blue
-        border-color: blue
+        color: #179cde
+        border-color: #179cde
         svg
-          fill: blue
+          fill: #179cde
   &__image
     padding: 80px 55px
     background-color: #e3eaf0
