--- a/src/sass/blocks/_modal.sass
+++ b/src/sass/blocks/_modal.sass
@@ -219,7 +219,7 @@
     width: 100%
     padding: 18px 0
     &_prev
-      margin-right: 15px
+      margin-bottom: 0
   &__confirm
     display: none
     margin: 35px 0 0
