--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -14,6 +14,10 @@ a
   &:hover
     color: $text-grey
 
+input[type="text"]
+  font-size: 16px
+  font-weight: 400
+
 .error
   margin-top: -15px
   margin-bottom: 15px
@@ -62,9 +66,37 @@ input[type="radio"]
     background-color: #e3eaf0
     color: #000
 
+.call-btn,
+.watsapp-btn
+  display: none
+  width: 40px
+  height: 40px
+  border-radius: 100%
+  position: fixed
+  bottom: 20px
+  z-index: 300
+
+.call-btn
+  left: 20px
+  background: #429cd9
+  svg
+    width: 50%
+    height: auto
+    display: block
+    margin: 10px auto 0
+    fill: #fff
+
+.watsapp-btn
+  right: 20px
+
 @media (max-width: 1200px)
   .container
     width: 90%
+
+@media only screen and (max-width: 960px)
+  .call-btn,
+  .watsapp-btn
+    display: block
 
 @media (max-width: 991px)
   .section
